# evmbt

./: .dockerignore  .gitmodules  Dockerfile  README.md  requirements.txt
benchmarks/assets/: libcContracts.csv  synthetic.list
cmake/: ProjectLLD.cmake  ProjectLLVM.cmake  ProjectWAVM.cmake  ProjectWabt.cmake
deployment/: Dockerfile.evmtrans  Dockerfile.full  README.md  bulk.sh  compose.yml
ethsema/: .gitignore  CMakeLists.txt  README.md  example.py  example_flip.py
ethsema/benchmarks/onchain/evm/: 0x002f1bfE85577d2F060ba399A69e3231337e6c6f.hex  0x00d46727c2E4A6E358A8c0D638137a3d91B19BE6.abi  0x01b3B04c11097412475F4f1A2F90F525d397a053.abi  0x01b3B04c11097412475F4f1A2F90F525d397a053.hex  0x01fa1B31766c0e58a2C66b6FBa3C36128aea60E4.hex  0x072B5669721559546bF484E4eC76087704B0d4A4.hex  0x07534500d6A28D775F652280C3961813D2A9Ec0e.abi  0x07534500d6A28D775F652280C3961813D2A9Ec0e.hex  0x07F81230d73a78f63F0c2A3403AD281b067d28F8.abi  0x07F81230d73a78f63F0c2A3403AD281b067d28F8.hex  0x084820cd4Fc214dD782A21b7D486F83B3A9C84A4.abi  0x09e43329552c9D81cF205Fd5f44796fBC40c822e.abi  0x09e43329552c9D81cF205Fd5f44796fBC40c822e.hex  0x0Cb46B9595678b2C4331274d8904803E48A9430f.abi  0x0c2e3bbc4646c872a3F5A745D2902aFFda82C58a.abi  0x0d92BFe502B38fDc1f3eB019EA9998Ff44818CCC.abi  0x0d92BFe502B38fDc1f3eB019EA9998Ff44818CCC.hex  0x0f2E4a70D3a0392F59E5fe4Fd778ef1155E7702F.hex  0x128C8F9C34971996961FD5De12a2bb6E2B4a9FD5.hex  0x13Afc26B2EBCa96521c47326D32ca620d8aB9e07.hex  0x14Cb2fdab641AF08BdD1EF4edc4Eefa4C751DD83.abi  0x15fAb94F9EBd4A2b67A0B1De5C8eF4de6750A7Ce.abi  0x15fAb94F9EBd4A2b67A0B1De5C8eF4de6750A7Ce.hex  0x16B4CF4b6834b9C661Ba32dd83A7Fe75e4E09f02.hex  0x1B84f3Db0EC59e1854f24d03596585F9740c9266.hex  0x1C450E21d72073D51392A37F2D98bBDf6895167a.abi  0x1C4993EC9573E7b045E462Ea73be03d3D6b49D38.hex  0x1CE7ecAB02B163f376E7ec026e6755626f14B289.hex  0x1a696C27be494BadDfa63A8ff1C37366F526c669.abi  0x1a696C27be494BadDfa63A8ff1C37366F526c669.hex  0x1d4E6cFBE34A7f4A33EacF25d0d6c3911cA5D45B.hex  0x1de8AeB6794DFF0c76914E4a429a28a44bA056c5.hex  0x1e0490cD098B40e61E3370489a0333F6c9e31467.abi  0x2047B5bB05567b54e3012F7B2bc282d3b390c1a5.abi  0x2047B5bB05567b54e3012F7B2bc282d3b390c1a5.hex  0x20aff4833e5D261bB34BC3980d88aD17A3FE90Dc.hex  0x2106d0274Ce3354AEBA10D0ba3F71EE0EE44A752.abi  0x218FDc5b352F6560E3ee67DA8112fe663f38AcA1.hex  0x228679770B2D8A281A466765ba55e0DFD8441ae6.abi  0x23297EE054e8f600AF482013dDBE856b7178a7d3.hex  (+315 more)
ethsema/benchmarks/scripts/: build.sh
ethsema/benchmarks/synthetic/abi/: builtin.abi  div.abi
ethsema/benchmarks/synthetic/sol/: add.sol  fib.sol  mod.sol  power.sol  shl.sol  shr.sol  sub.sol  warshall.sol
ethsema/cmake/: ProjectBinaryen.cmake
ethsema/evmc/: .bumpversion.cfg  .codespell-whitelist  CHANGELOG.md  Doxyfile  README.md  appveyor.yml  circle.yml
ethsema/evmc/bindings/go/evmc/: evmc_test.go  host.go  host_test.go
ethsema/evmc/bindings/rust/evmc-declare-tests/src/: lib.rs
ethsema/evmc/bindings/rust/evmc-declare/src/: lib.rs
ethsema/evmc/bindings/rust/evmc-sys/src/: lib.rs
ethsema/evmc/bindings/rust/evmc-vm/: Cargo.toml
ethsema/evmc/bindings/rust/evmc-vm/src/: container.rs  lib.rs  types.rs
ethsema/evmc/cmake/cable/: CableBuildType.cmake  CableCompilerSettings.cmake  README.md  bootstrap.cmake
ethsema/evmc/cmake/cable/buildinfo/: buildinfo.cmake
ethsema/evmc/docs/: EVMC.md
ethsema/evmc/examples/: CMakeLists.txt  example.c  example_host.cpp  example_host.h
ethsema/evmc/examples/example_precompiles_vm/: example_precompiles_vm.cpp
ethsema/evmc/examples/example_vm/: CMakeLists.txt  example_vm.c  example_vm.h
ethsema/evmc/examples/use_evmc_in_cmake/: use_evmc_in_cmake.c
ethsema/evmc/examples/use_instructions_in_cmake/: use_instructions_in_cmake.c
ethsema/evmc/include/evmc/: evmc.hpp  helpers.h  loader.h  utils.h
ethsema/evmc/lib/instructions/: CMakeLists.txt
ethsema/evmc/lib/loader/: CMakeLists.txt  loader.c
ethsema/evmc/test/: CMakeLists.txt
ethsema/evmc/test/integration/: CMakeLists.txt
ethsema/evmc/test/integration/compilation/: CMakeLists.txt
ethsema/evmc/test/unittests/: test_cpp.cpp  test_deprecated.cpp  test_helpers.cpp
ethsema/evmtrans/: BinaryTrans.h  BuildInfo.h.in  Cache.cpp  Cache.h  CodeGen.h  CompilerHelper.h  EEIModule.h  Tainter.h  WASMCompiler.h
ethsema/evmtrans/hera/: binaryen.h  eei.h  helpers.h  hera.h
ethsema/tests/: CMakeLists.txt  README.md  asm  long.hex  rt_short.asm  short.hex  t  t.wasm  test-se.cpp  tmp.hex
ethsema/tests/contracts/: OpCodes.json  OpCodeshh.sol  Transfer.sol  arithmetic.json  arithmetic.sol  example.sol  reentrance.hex  returnStruct.json  safesend.hex  soll.sol  storage.json  storage.sol
ethsema/tests/evmtrans/: BasicBlock.cpp  BasicBlock.h  BinaryTrans.cpp  Common.h  EEIModule.cpp  Optimizer.cpp  SECore.cpp  WASMCompiler.cpp
ethsema/tests/evmtrans/hera/: exceptions.h  helpers.cpp  wavm.h
ethsema/tests/runtimeTest/: arithmetic.py  enUpgrade.py  rollback.py  soll.py
ethsema/tests/scripts/: ewasm.sh  run_geth.sh
evmc/: .clang-format  CMakeLists.txt
evmc/docs/: Host_Guide.md  VM_Guide.md
evmc/lib/: CMakeLists.txt
evmtrans/: Arith256.cpp  Arith256.h  BasicBlock.cpp  CMakeLists.txt  CodeGen.cpp  ExecStats.cpp  Instruction.cpp  NEARModule.cpp  Optimizer.h  Tainter.cpp  Type.cpp  Type.h  Utils.cpp  WASMCompiler.cpp  WASMCompiler.h  standalone-evmtrans.cpp
evmtrans/hera/: binaryen.cpp  debugging.h  hera.cpp  wabt.h
include/: evmtrans.h
patches/hera-local-distribution/: README.md  hera-local-distribution.patch
scripts/: tests.sh
tests/: .tmp.sol  loop.hex  res.bc  res.opt.bc  res.opt.ll  res.wat  rt_short.hex  utils.py
tests/contracts/: OpCodes.sol  OpCodeshh.json  Transfer.json  codecopy.hex  cross.sol  eei.sol  lottery.json  lottery.sol  reentrance.json  reentrance.sol  returnStruct.sol  soll.json  string.sol  vulSend.sol
tests/evmtrans/: CompilerHelper.cpp  ExecStats.h  Instruction.h  NEARModule.h  SECore.h  Utils.h  standalone-evmtrans.cpp
tests/klee/: rt.bc
tests/runtimeTest/: constructorArgs.py  crossContract.py  eei.py  example.py  opcodes.py  reentrancy.py  (+6 more)
(+453 files in other folders)
